# Botball-Game-State

./: .gitignore  CMakeLists.txt  Doxyfile  Packages  README.md  bot_a.cpp  bot_b.cpp  botball-gamestate_1.0.0-2_arm64.deb  commit  installOnWombat.sh  main.cpp  meson.build
assets/: phase-config.json
config/state-config/: game-state-config.json  phase-config.json  table-config.json  world.json
debian/: botball-gamestate.substvars  changelog  control  debhelper-build-stamp  files
debian/.debhelper/botball-gamestate/: dbgsym-build-ids
debian/.debhelper/botball-gamestate/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/botball-gamestate/dbgsym-root/usr/lib/debug/.dwz/aarch64-linux-gnu/: botball-gamestate.debug
debian/.debhelper/botball-gamestate/dbgsym-root/usr/share/doc/: botball-gamestate-dbgsym
debian/botball-gamestate/DEBIAN/: control  md5sums
debian/botball-gamestate/usr/include/botball/: Phase.h  Server.h  Socket.h  TableState.h  Util.h
debian/botball-gamestate/usr/lib/aarch64-linux-gnu/pkgconfig/: botball-gamestate.pc
deploy/: botball-gamestate_1.0.0-1_arm64.deb
docs/: _game_state_8h_source.html  _phase_8h_source.html  _phase_state_8h_source.html  _table_state_8h_source.html  _util_8h_source.html  annotated.html  annotated_dup.js  class_game_state-members.html  class_game_state.html  class_game_state.js  class_phase-members.html  class_phase.html  class_phase.js  class_phase_state-members.html  class_phase_state.html  class_phase_state.js  class_table_state-members.html  class_table_state.html  class_table_state.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  index.html  navtreedata.js  navtreeindex0.js  struct_config-members.html  struct_config.html
docs/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_6.js  classes_2.js  functions_0.js  functions_2.js  functions_3.js  searchdata.js
impl/: Client.cpp  GameState.cpp  Phase.cpp  PhaseState.cpp  Server.cpp  Socket.cpp  TableState.cpp  Util.cpp
include/: Client.h  GameState.h  GameTableState.h  Phase.h  PhaseState.h  Server.h  Socket.h  TableState.h  Util.h  WorldState.h
lib/: json.hpp
src/: Client.cpp  GameState.cpp  GameTableState.cpp  Phase.cpp  PhaseActions.cpp  PhaseState.cpp  Server.cpp  Socket.cpp  TableState.cpp  WorldState.cpp  main.cpp
